# EmployeeApp

./: CMakeLists.txt  main.cpp
populators/: departmentcombopopulator.cpp  departmentcombopopulator.h  icombopopulator.h  jobtitlecombopopulator.cpp  jobtitlecombopopulator.h
preparators/: emaillineeditpreparator.cpp  emaillineeditpreparator.h  ilineeditpreparator.h  salarylineeditpreparator.cpp  salarylineeditpreparator.h
sql/: Department.sql  Employee.sql  JobTitle.sql  Manager.sql  employeeinserter.cpp  employeeinserter.h  sqlserver.h
views/: mainwindow.cpp  mainwindow.h  mainwindow.ui  managerselectordialog.cpp  managerselectordialog.h  managerselectordialog.ui
